# AlphaTUI

./: CMakeLists.txt  README.md  core.txt  files.txt
include/dflat/: dflat.h  scdos.h  system.h  types.h  window.h
src/core/: applicat.c  barchart.c  box.c  button.c  calendar.c  checkbox.c  clipbord.c  combobox.c  config.c  console.c  decomp.c  dfalloc.c  dialbox.c  dialogs.c  direct.c  editbox.c  editor.c  fileopen.c  helpbox.c  htree.c  huffc.c  listbox.c  lists.c  log.c  memopad.c  menu.c  menubar.c  menus.c  message.c  mouse.c  msgbox.c  normal.c  pictbox.c  popdown.c  radio.c  rect.c  search.c  slidebox.c  spinbutt.c  statbar.c  (+6 more)
